# gifgoblin

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
deploy/: gifgoblin.service  gifharvest.service  vps-deploy.sh
gifharvest/: bot.py  cli.py  config.py  db.py  downloader.py  models.py  scraper.py  twpatch.py
tests/: helpers.py  test_config.py  test_db.py  test_downloader.py  test_health.py  test_scraper.py  test_twpatch.py
